js/js.translator/testData/incremental/invalidation/internalMethodFakeOverrideInFriendMain/lib1/l1.0.kt
package sample

open class Base {
    internal open fun value(): Int = 0
}
